--- a/package.json
+++ b/package.json
@@ -42,6 +42,11 @@
     "vue": "latest",
     "vue-router": "latest"
   },
+  "pnpm": {
+    "overrides": {
+      "vite": "latest"
+    }
+  },
   "devDependencies": {
     "nuxt": "3.15.4"
   },
