--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
   },
   "pnpm": {
     "overrides": {
-      "vite": "latest"
+      "vite": "latest",
+      "@nuxtjs/mdc": "^0.13.3"
     }
   },
   "devDependencies": {
