--- a/core/package.json
+++ b/core/package.json
@@ -65,7 +65,8 @@
   "pnpm": {
     "overrides": {
       "@nuxt/kit": "3.17.1",
-      "esbuild": "^0.25.0"
+      "esbuild": "^0.25.0",
+      "vite": "^6.3.4"
     }
   },
   "devDependencies": {
