--- a/docs/package.json
+++ b/docs/package.json
@@ -11,7 +11,8 @@
   },
   "pnpm": {
     "overrides": {
-      "esbuild": "^0.25.0"
+      "esbuild": "^0.25.0",
+      "vite": "^5.4.19"
     }
   }
 }
