--- a/core/package.json
+++ b/core/package.json
@@ -64,7 +64,8 @@
   },
   "pnpm": {
     "overrides": {
-      "@nuxt/kit": "3.17.3"
+      "@nuxt/kit": "3.17.3",
+      "trix": "^2.1.15"
     }
   },
   "devDependencies": {
