--- a/core/package.json
+++ b/core/package.json
@@ -72,6 +72,7 @@
     "overrides": {
       "@nuxt/kit": "3.17.4",
       "esbuild": "^0.25.0",
+      "tar-fs": "^3.0.9",
       "trix": "^2.1.15"
     },
     "onlyBuiltDependencies": [
