--- a/core/package.json
+++ b/core/package.json
@@ -72,7 +72,8 @@
   },
   "pnpm": {
     "overrides": {
-      "@nuxt/kit": "3.17.5"
+      "@nuxt/kit": "3.17.5",
+      "brace-expansion": "^1.1.12"
     },
     "onlyBuiltDependencies": [
       "@parcel/watcher",
