--- a/core/package.json
+++ b/core/package.json
@@ -84,7 +84,10 @@
     "overrides": {
       "@nuxt/kit": "3.17.7",
       "@nuxt/schema": "3.17.7",
-      "brace-expansion": "^1.1.12"
+      "@eslint/plugin-kit": "^0.3.3",
+      "vue-i18n": "^10.0.8",
+      "@intlify/core": "^10.0.8",
+      "@intlify/core-base": "^10.0.8"
     },
     "onlyBuiltDependencies": [
       "@parcel/watcher",
