--- a/core/package.json
+++ b/core/package.json
@@ -91,6 +91,7 @@
       "@eslint/plugin-kit": "^0.3.3",
       "@nuxtjs/mdc": "^0.17.2",
       "axios": "^1.11.0",
+      "devalue": "^5.3.2",
       "tmp": "^0.2.5"
     },
     "onlyBuiltDependencies": [
