--- a/core/package.json
+++ b/core/package.json
@@ -85,6 +85,9 @@
     "zod": "4.1.11"
   },
   "pnpm": {
+    "overrides": {
+      "tar-fs": "^2.1.4"
+    },
     "onlyBuiltDependencies": [
       "@parcel/watcher",
       "@tailwindcss/oxide",
