build: security update - tar (CVE-2025-64118)

--- a/core/package.json
+++ b/core/package.json
@@ -86,6 +86,9 @@
     "zod": "4.1.12"
   },
   "pnpm": {
+    "overrides": {
+      "tar": "^7.5.2"
+    },
     "onlyBuiltDependencies": [
       "@parcel/watcher",
       "@tailwindcss/oxide",
